@@ -7,3 +7,7 @@ ENDIF(BUILD_CODEC)
 IF(BUILD_MJ2)
  ADD_SUBDIRECTORY(mj2)
 ENDIF(BUILD_MJ2)
+
+IF(BUILD_JPIP)
+ ADD_SUBDIRECTORY(jpip)
+ENDIF(BUILD_JPIP)
